# SerMan

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SerMan.desktop  SerManSolution.pro  commands.cmd  server.py
QtTest/: CMakeLists.txt  QtTest.pro  history.cc  history.h  main.cc  sermanwindow.cc  sermanwindow.h  sermanwindow.ui
Test/: CMakeLists.txt  Makefile  Test.pro  tst_testtest  tst_testtest.cc
serman/: CMakeLists.txt  Makefile  SerMan  communicator.cc  communicator.h  fileloader.cc  fileloader.h  history.cc  history.h  keyboardfilter.cc  keyboardfilter.h  main.cc  search-dialog.ui  searchdialog.cc  searchdialog.h  serman.pro  sermanwindow.cc  sermanwindow.h  sermanwindow.ui  ui_search-dialog.h  ui_sermanwindow.h  util.cc  util.h
